--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
 
 				<div class="events_box_row">
 					<div class="events_box" data-aos="fade-up" data-aos-duration="1500">
-						<img src="./assets/img/Event/event1-small.webp" class="events_img"
+						<img src="./assets/img/Event/event1-small.webp" class="events_img img-fluid width:100%"
 							alt="Course on full stack development" />
 						<div class="content ">
 							<h4>Full Stack Development</h4>
@@ -1045,7 +1045,7 @@
 					</div>
 
 					<div class="events_box" data-aos="fade-up" data-aos-duration="1500">
-						<img src="./assets/img/Event/event3.webp" class="events_img" alt="Course on Machine Learning" />
+						<img src="./assets/img/Event/event3.webp" class="events_img img-fluid width:100%" alt="Course on Machine Learning" />
 						<div class="content">
 							<h4>Get Started With Machine Learning</h4>
 							<p>Speaker : Saurav Mukherjee (Founder CodeIN Community)</p>
@@ -1055,7 +1055,7 @@
 					</div>
 
 					<div class="events_box" data-aos="fade-up" data-aos-duration="1500">
-						<img src="./assets/img/Event/event2.webp" class="events_img"
+						<img src="./assets/img/Event/event2.webp" class="events_img img-fluid width:100%"
 							alt="Googlr Crowdsource contribution image" />
 						<div class="content">
 							<h4>Google CrowdSource Contributions</h4>
@@ -1066,7 +1066,7 @@
 					</div>
 
 					<div class="events_box" data-aos="fade-up" data-aos-duration="1500">
-						<img src="./assets/img/Event/event4-small.webp" class="events_img lazyload"
+						<img src="./assets/img/Event/event4-small.webp" class="events_img lazyload img-fluid width:100%"
 							alt="Hacktoberfest event image" />
 						<div class="content">
 							<h4> Introduction to HACKTOBERFEST' 2021</h4>
