--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -62,32 +62,32 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
             <li class="nav-item">
-              <a class="nav-link" href="/">
+              <a class="nav-link" href="#hero-area">
                 Home
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#about">
+              <a class="nav-link" href="#about">
                 About
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#testimonials">
+              <a class="nav-link" href="#testimonials">
                 Team
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#events">
+              <a class="nav-link" href="#events">
                 Events
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/#opportunity">
+              <a class="nav-link" href="#opportunity">
                 Opportunity
               </a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="./blog.html">
+              <a class="nav-link" href="blog.html">
                 Blogs
               </a>
             </li>
