--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-danger rounded px-3" href="./hacktoberfest2022.html">
+							<a class="nav-link btn btn-outline-danger rounded px-3" target="_blank" href="./hacktoberfest2022.html">
 								HacktoberFest 2022
 							</a>
 						</li>
