Fixed the mentor discord link on benefits page

--- a/benefit.html
+++ b/benefit.html
@@ -189,7 +189,7 @@
           </div>
 
           <div class="mentor-profile">
-            <a href=" discordapp.com/users/758681549993541684">
+            <a href="https://discordapp.com/users/758681549993541684">
                       <i class="fab fa-discord"></i>Saurav Mukherjee#4599 </a>
           </div>
           
