--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -62,45 +62,46 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
             <li class="nav-item">
-              <a class="nav-link" href="/">
-                Home
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/#about">
-                About
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/#testimonials">
-                Team
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/#events">
-                Events
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/#opportunity">
-                Opportunity
-              </a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="./blog.html">
-                Blogs
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#community_partner">
-                Sponsors
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">
-                Contact
-              </a>
-            </li>
+              <a class="nav-link" href="/#hero-area">
+								Home
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/#about">
+								About
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/#testimonials">
+								Team
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/#events">
+								Events
+							</a>
+						</li>
+						
+						<li class="nav-item">
+							<a class="nav-link" href="/#opportunity">
+								Opportunity
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/#blog">
+								Blogs
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#community_partner">
+								Sponsors
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#contact">
+								Contact
+							</a>
+						</li>
           </ul>
         </div>
       </div>
