Made the changes

--- a/benefit.html
+++ b/benefit.html
@@ -181,19 +181,31 @@
       We also have a dedicated channel for mentors in the server. You can reach them on Discord by using <strong>@Mentor-Channel</strong> tag in your message in the server.
     </p>  
     <br>
+    <strong>For any queries: Contact Saurav Mukherjee (Founder CodeIN Community):</strong>
     <div class="mentor-info">
-          <strong>For any queries: Contact Saurav Mukherjee (Founder CodeIN Community):</strong>
-          <div class="mentor-profile">
-                      <a href=" https://www.linkedin.com/in/sauravmukherjee44"> <i
-                          class="fab fa-linkedin"></i> Saurav Mukherjee </a>
-          </div>
+      <div class="mentor-profile">
+        <a href=" https://www.linkedin.com/in/sauravmukherjee44"> <i class="fab fa-linkedin"></i></a>
+      </div>
 
-          <div class="mentor-profile">
-            <a href=" discordapp.com/users/758681549993541684">
-                      <i class="fab fa-discord"></i>Saurav Mukherjee#4599 </a>
-          </div>
-          
+      <div class="mentor-profile">
+        <a href="https://discord.com/users/758681549993541684">
+          <i class="fab fa-discord"></i></a>
+      </div>
 
+      <div class="mentor-profile">
+        <a href="https://github.com/SauravMukherjee44">
+          <i class="fab fa-github"></i></a>
+      </div>
+
+      <div class="mentor-profile">
+        <a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug">
+          <i class="fab fa-youtube"></i></a>
+      </div>
+      
+      <div class="mentor-profile">
+        <a href="https://twitter.com/mesourav44">
+          <i class="fab fa-twitter"></i></a>
+      </div>
     </div>
     </div>
 
