Resized the blog cards equally
Set height to auto and the required change was made. Also made view all responsive.

--- a/index.html
+++ b/index.html
@@ -1219,7 +1219,7 @@
 			</div>
 		</div>
 	</div>
-	<button class="btn btn-common opportunity_btn"><a href="./blog.html">View All</a>
+	<button class="btn btn-common opportunity_btn opportunity_btn_t"><a href="./blog.html">View All</a>
 	</button>
 	<br><br>
 	<!-- Blog Section End-->
