--- a/opportunity.html
+++ b/opportunity.html
@@ -32,6 +32,11 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-png">
 
+    <!-- animate on scroll import -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- animate on scroll import end -->
+
 </head>
 
 <body>
@@ -109,7 +114,7 @@
 
         <div class="oppurtunity_section">
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/100 Days of Code.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">CodeIN Community is come up with 100 Days of Code Program</h5>
@@ -146,7 +151,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/opp-2.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Spark-a-thon a hackathon- By CodeIN Community</h5>
@@ -188,7 +193,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/codein.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Winter Fest 2022 🧑‍💻</h5>
@@ -237,7 +242,7 @@
         <!-- other opportunity cards -->
         <div class="oppurtunity_section">
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" height="100%" src="./assets/img/opportunity/oppor4.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Embark on a week of creation and exploration at LHD</h5>
@@ -276,7 +281,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" height="23%" src="./assets/img/opportunity/oppo5.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Get rewarded for gaining tech skills and free certifications at the Microsoft
@@ -302,7 +307,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" height="50%" src="./assets/img/opportunity/opp__6.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Internship Opportunity at Sharechat ✨.</h5>
@@ -344,7 +349,7 @@
 
         <div class="oppurtunity_section">
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/opp7.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">DELL DIGITAL ART COMPETITION</h5>
@@ -389,7 +394,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/oppo8.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Amazon | Hiring Software Development Intern 🥳🥳</h5>
@@ -428,7 +433,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/opp9.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Internship Challenge by Ronin Labs is brought to you by Reskilll🤩 X Spark
@@ -451,7 +456,7 @@
         </div>
 
         <div class="oppurtunity_section">
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/opp10.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">📌Winter Interview Preparation course from Geeks for Geeks(100% off)
@@ -486,7 +491,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/oppor11.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Dream it. Build it. Live it.😎 </h5>
@@ -511,7 +516,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/opp12.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Fellowship Applications are Open!🤩</h5>
@@ -542,16 +547,19 @@
         </div>
 
         <div class="oppurtunity_section">
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/gsoc.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Google summer of code (GSOC) Summer opwn source program Opportunity by google</h5>
+                    <h5 class="card-title">Google summer of code (GSOC) Summer opwn source program Opportunity by google
+                    </h5>
                     <br> <br>
                     </p>
                     <ul style="list-style-type:square">
 
-                        <li>The Google Summer of Code, often abbreviated to GSoC, is an international annual program in which Google awards stipends to contributors who successfully complete a free and open-source software coding project during the summer</li>
-                            <br>
+                        <li>The Google Summer of Code, often abbreviated to GSoC, is an international annual program in
+                            which Google awards stipends to contributors who successfully complete a free and
+                            open-source software coding project during the summer</li>
+                        <br>
 
                         <li>Eligibility Requirements For Participation ?</li>
                         <li>
@@ -561,12 +569,11 @@
 
                             🌟 You must be an open source beginner. <br>
 
-                            🌟You must reside in a country that is not currently embargoed by the United States. 
+                            🌟You must reside in a country that is not currently embargoed by the United States.
                         </li> <br>
                         <li>
                             To know more, Click here 👇:-
-                            <a
-                                href="https://summerofcode.withgoogle.com/">https://summerofcode.withgoogle.com/</a>
+                            <a href="https://summerofcode.withgoogle.com/">https://summerofcode.withgoogle.com/</a>
                         </li>
 
                         <br>
@@ -583,7 +590,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/Hacktoberfest.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Hacktoberfest is live! 😍 </h5>
@@ -591,13 +598,17 @@
                     </p>
                     <ul>
                         <li>
-                            Hacktoberfest is an event hosted by DigitalOcean that partners with many organizations. The goal is to give back and contribute to open-source projects. The organizers offer little incentives for a job well done, like a shirt and stickers. Other organizations also get involved by offering their own rewards </li><br>
+                            Hacktoberfest is an event hosted by DigitalOcean that partners with many organizations. The
+                            goal is to give back and contribute to open-source projects. The organizers offer little
+                            incentives for a job well done, like a shirt and stickers. Other organizations also get
+                            involved by offering their own rewards </li><br>
 
-                        <li>T Submit 2 pull requests to receive a Flyte mug; 3 pull requests to receive a Flyte t-shirt; 3+ pull requests to receive The North Face® jacket; contribute a plugin to receive a voucher </li> <br>
+                        <li>T Submit 2 pull requests to receive a Flyte mug; 3 pull requests to receive a Flyte t-shirt;
+                            3+ pull requests to receive The North Face® jacket; contribute a plugin to receive a voucher
+                        </li> <br>
 
-                        <ul>📌Register here🔥:</ul> 
-                            <a
-                                href="https://hacktoberfest.com/">https://hacktoberfest.com/</a>
+                        <ul>📌Register here🔥:</ul>
+                        <a href="https://hacktoberfest.com/">https://hacktoberfest.com/</a>
                         </li>
 
                     </ul>
@@ -605,19 +616,24 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/opp12.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Morgan Stanley Spring Analyst Program 2022 [Mumbai / Bangalore; 6 Months]!🤩</h5>
+                    <h5 class="card-title">Morgan Stanley Spring Analyst Program 2022 [Mumbai / Bangalore; 6 Months]!🤩
+                    </h5>
                     <br>
                     </p>
                     <ul>
-                        <li>About the program:-</li> 
+                        <li>About the program:-</li>
 
-                        <li>Training commences with an induction day that provides an overview of the Firm, their structure and strategy as well as guidance on making the transition from campus to corporate environment.</li>
-                        <li>  Following direct placement into teams, Summer Analysts work on live projects of real relevance to Morgan Stanley.</li>
-                        <li>  Throughout the Program, students experience guest lectures with senior management, and have opportunities to attend networking, team building, social and charitable events.</li>
-                            </li><br>
+                        <li>Training commences with an induction day that provides an overview of the Firm, their
+                            structure and strategy as well as guidance on making the transition from campus to corporate
+                            environment.</li>
+                        <li> Following direct placement into teams, Summer Analysts work on live projects of real
+                            relevance to Morgan Stanley.</li>
+                        <li> Throughout the Program, students experience guest lectures with senior management, and have
+                            opportunities to attend networking, team building, social and charitable events.</li>
+                        </li><br>
                         <li>Read more here: <a
                                 href="https://www.noticebard.com/top-7-internships-for-cse-students-in-india/">https://www.noticebard.com/top-7-internships-for-cse-students-in-india/</a>
                         </li>
@@ -630,7 +646,7 @@
         </div>
 
         <div class="oppurtunity_section">
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/goldmensachs.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title"> Goldman Sachs Logo Summer Analyst Internship</h5>
@@ -638,20 +654,23 @@
                     </p>
                     <ul style="list-style-type:square">
 
-                        <li>The Google Summer of Code, often abbreviated to GSoC, is an international annual program in which Google awards stipends to contributors who successfully complete a free and open-source software coding project during the summer</li>
-                            <br>
+                        <li>The Google Summer of Code, often abbreviated to GSoC, is an international annual program in
+                            which Google awards stipends to contributors who successfully complete a free and
+                            open-source software coding project during the summer</li>
+                        <br>
 
                         <li>Eligibility Requirements For Participation ?</li>
                         <li>
-                            The summer analyst role is for candidates currently pursuing a college or university degree and is usually undertaken during the second penultimate year of study.
+                            The summer analyst role is for candidates currently pursuing a college or university degree
+                            and is usually undertaken during the second penultimate year of study.
                             Program Type
-                            
+
                             Eight to ten weeks
                             Deadline
                             <br>
                             Applications for our 2022 program are now open.
-                             <br>
- 
+                            <br>
+
                         </li> <br>
                         <li>
                             To know more, Click here 👇:-
@@ -668,7 +687,7 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/mlh.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">MLH Fellowship program </h5>
@@ -676,12 +695,14 @@
                     </p>
                     <ul>
                         <li>
-                            A fully remote, 12-week internship where participants earn a stipend and learn to collaborate on real open source projects with peers and engineers from top companies </li>
-                            <br>
-                            <li>You'll collaborate on projects that are sourced directly from our corporate partners. Whether you're contributing to a major Open Source technology or a new greenfield project, you'll be solving a real-world need with technologies that employers care about.</li>
-                               <ul>📌Register here🔥:</ul> 
-                            <a
-                                href="https://fellowship.mlh.io/">https://fellowship.mlh.io/</a>
+                            A fully remote, 12-week internship where participants earn a stipend and learn to
+                            collaborate on real open source projects with peers and engineers from top companies </li>
+                        <br>
+                        <li>You'll collaborate on projects that are sourced directly from our corporate partners.
+                            Whether you're contributing to a major Open Source technology or a new greenfield project,
+                            you'll be solving a real-world need with technologies that employers care about.</li>
+                        <ul>📌Register here🔥:</ul>
+                        <a href="https://fellowship.mlh.io/">https://fellowship.mlh.io/</a>
                         </li>
 
                     </ul>
@@ -689,28 +710,33 @@
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card" data-aos="fade-up">
                 <img class="card-img-top" src="./assets/img/opportunity/fossasia.jpeg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">FOSSASIA Codeheat ...</h5>
                     <br>
                     </p>
                     <ul>
-                        <li>About the program:-</li> 
+                        <li>About the program:-</li>
                         <li>
-                        Codeheat is a coding contest for FOSSASIA projects on GitHub.
-                        <br>
+                            Codeheat is a coding contest for FOSSASIA projects on GitHub.
+                            <br>
 
-                        The contest runs until May 11, 2022. The contest is separated into two months period after which winners of each period are announced.
-                        <br>
-                        
-                        Our jury will choose the winners from the top 10 contributors according to code quality and relevance of commits for the project each period. The jury also takes other contributions like submitted scrum reports and technical blog posts into account, but of course awesome code is the most important item on the list.</li>
+                            The contest runs until May 11, 2022. The contest is separated into two months period after
+                            which winners of each period are announced.
+                            <br>
+
+                            Our jury will choose the winners from the top 10 contributors according to code quality and
+                            relevance of commits for the project each period. The jury also takes other contributions
+                            like submitted scrum reports and technical blog posts into account, but of course awesome
+                            code is the most important item on the list.
+                        </li>
                         <br>
                         <li>
-                        Other participants will have the chance to win Tshirts and Swag and will get certificates of participation. These will be provided after the end of the contest on May 11, 2022
+                            Other participants will have the chance to win Tshirts and Swag and will get certificates of
+                            participation. These will be provided after the end of the contest on May 11, 2022
                         <li>Read more here: 👇</li>
-                             <a
-                                href="https://codeheat.org/">https://codeheat.org/</a>
+                        <a href="https://codeheat.org/">https://codeheat.org/</a>
                         </li>
 
 
@@ -850,7 +876,9 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/form-validator.min.js"></script>
     <script src="assets/js/contact-form-script.min.js"></script>
-
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
