--- a/404.html
+++ b/404.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Not Found</title>
+    <!-- animate on scroll import -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- animate on scroll import end -->
     <meta name="description"
         content="CodeIN Community is the Community of Coding Enthusiasts
 	 Join Us for Hackathons, Technical Events, Open Source, Internship Opportunities and various upcoming opportunities to learn different technologies.">
@@ -56,9 +60,14 @@
 </head>
 
 <body>
-    <h1>404</h1>
-    <h3>Page not found!</h3>
+    <h1 data-aos="fade-up">404</h1>
+    <h3 data-aos="fade-up">Page not found!</h3>
     <a href="/">Go to Home?</a>
+
+    <script>
+        AOS.init();
+    </script>
+
 </body>
 
 </html>
