Fixed Nav Btn Hover Bug

--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-danger rounded px-3" href="#joinus">
+							<a class="nav-btn rounded px-3" href="#joinus">
 								Join Us
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-danger rounded px-3" target="_blank" href="./hacktoberfest2022.html">
+							<a class="nav-btn rounded px-3" target="_blank" href="./hacktoberfest2022.html">
 								HacktoberFest 2022
 							</a>
 						</li>
