--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
 								Contact
 							</a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item"  class="COLORFILL">
 							<a class="nav-link btn btn-outline-danger rounded px-3" href="#joinus">
 								Join Us
 							</a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item" class="COLORFILL">
 							<a class="nav-link btn btn-outline-danger rounded px-3" target="_blank" href="./hacktoberfest2022.html">
 								HacktoberFest 2022
 							</a>
