--- a/index.html
+++ b/index.html
@@ -1271,6 +1271,21 @@
 					  <div class="swiper-slide">
 						<div class="testimonial-item">
 						  <div class="img-thumb">
+							<img src="./assets/img/team/ayush_raj.png" alt="">
+						  </div>
+						  <div class="info">
+							<h2>Ayush Raj
+							</h2>
+							<h3>CodeIN community have helped me to start the open 
+								source.The members of this community is so cooperative. Due to this community
+								only, I realised the importance of community learning in the tech field.
+								I would thank codeIN community for accepting me in and for providing so much support.</h3>
+						  </div>
+						</div>
+					  </div>
+					  <div class="swiper-slide">
+						<div class="testimonial-item">
+						  <div class="img-thumb">
 							<img src="./assets/img/team/vaibhav.jpg" alt="">
 						  </div>
 						  <div class="info">
