navbar Hacktoberfest2022 li alligned

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<i class="lni-menu"></i>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarCollapse">
-					<ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
+					<ul class="navbar-nav mr-auto w-100 justify-content-end clearfix" style="margin: 0 -32px">
 						<li class="nav-item active">
 							<a class="nav-link" href="#hero-area">
 								Home
