Made sponsers section responsive

--- a/blog.html
+++ b/blog.html
@@ -408,32 +408,31 @@
         <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
           <div class="community_box box1">
             <a href="https://www.geeksforgeeks.org/" style="text-decoration: none;" target="_blank">
-              <img src="./assets/img/Partners/Geeks.jpg" class="communityPartner__image" alt="">
+              <img src="./assets/img/Partners/Geeks.jpg" class="communityPartner__image" alt="" style="margin-bottom:2rem ;">
             </a>
           </div>
 
 
-          <div class="community_box box2">
+          <div class="community_box box2"style="margin-bottom:2rem ;">
             <a href="https://www.azdev.community/index.html#communities" style="text-decoration: none;" target="_blank">
               <img src="./assets/img/Partners/Az.png" class="communityPartner__image" alt="">
             </a>
           </div>
 
-          <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
-            <div class="community_box box1">
+            <div class="community_box box1" style="margin-bottom:2rem ;">
               <a href="https://givemycertificate.com/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/GMC LogoS.png" class="communityPartner__image" alt="">
               </a>
-            </div>
+             </div>
 
-            <div class="community_box box2" data-tilt data-tilt-scale="1.1">
+            <div class="community_box box2" data-tilt data-tilt-scale="1.1" style="margin-bottom:2rem ;">
               <a href="https://www.newtonschool.co/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/Newton School.png" class="communityPartner__image"
                   alt="Azdev community image">
               </a>
             </div>
 
-            <div class="community_box box2" data-tilt data-tilt-scale="1.1">
+            <div class="community_box box2" data-tilt data-tilt-scale="1.1" style="margin-bottom:2rem ;">
               <a href="https://www.codingminutes.com/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
                   alt="Azdev community image">
