--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -432,32 +432,34 @@
             </a>
           </div>
 
-
           <div class="community_box box2">
             <a href="https://www.azdev.community/index.html#communities" style="text-decoration: none;" target="_blank">
               <img src="./assets/img/Partners/Az.png" class="communityPartner__image" alt="">
             </a>
           </div>
+          </div>
 
           <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
-            <div class="community_box box1">
+            <div class="community_box box3">
               <a href="https://givemycertificate.com/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/GMC LogoS.png" class="communityPartner__image" alt="">
               </a>
             </div>
-
-            <div class="community_box box2" data-tilt data-tilt-scale="1.1">
+            </div>
+            <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
+            <div class="community_box box4" data-tilt data-tilt-scale="1.1">
               <a href="https://www.newtonschool.co/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/Newton School.png" class="communityPartner__image"
                   alt="Azdev community image">
               </a>
             </div>
 
-            <div class="community_box box2" data-tilt data-tilt-scale="1.1">
+            <div class="community_box box5" data-tilt data-tilt-scale="1.1">
               <a href="https://www.codingminutes.com/" style="text-decoration: none;" target="_blank">
                 <img src="./assets/img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
                   alt="Azdev community image">
               </a>
+            </div>
             </div>
           </div>
 
