Updated html for telegram

--- a/blog.html
+++ b/blog.html
@@ -584,7 +584,7 @@
         <a href=" https://discord.com/invite/sqFRzrj7f3" target="_blank"><i class="fab fa-discord"></i></a>
       </li>
       <li>
-        <a href="https://t.me/CodeINCommunity"><i class="fab fa-telegram" target="_blank"></i></a>
+        <a href="https://t.me/CodeINCommunity" target="_blank"><i class="fab fa-telegram" ></i></a>
       </li>
       <li>
         <a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website" target="_blank"><i
