--- a/giveaway.html
+++ b/giveaway.html
@@ -572,8 +572,8 @@ Anushka Mishra
 						class="fab fa-discord"></i></a>
 			</li>
 			<li>
-				<a class="telegram" href="https://t.me/CodeINCommunity"><i class="fab fa-telegram"
-						target="_blank"></i></a>
+				<a class="telegram" href="https://t.me/CodeINCommunity" target="_blank"><i class="fab fa-telegram"
+						></i></a>
 			</li>
 			<li>
 				<a class="github" href="https://github.com/SauravMukherjee44/CodeIN-Community-Website"
