--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<i class="lni-menu"></i>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarCollapse">
-					<ul class="navbar-nav mr-auto w-100 justify-content-end clearfix" style="margin: 0 -32px">
+					<ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
 						<li class="nav-item active">
 							<a class="nav-link" href="#hero-area">
 								Home
@@ -1271,21 +1271,6 @@
 					  <div class="swiper-slide">
 						<div class="testimonial-item">
 						  <div class="img-thumb">
-							<img src="./assets/img/team/ayush_raj.png" alt="">
-						  </div>
-						  <div class="info">
-							<h2>Ayush Raj
-							</h2>
-							<h3>CodeIN community have helped me to start the open 
-								source.The members of this community is so cooperative. Due to this community
-								only, I realised the importance of community learning in the tech field.
-								I would thank codeIN community for accepting me in and for providing so much support.</h3>
-						  </div>
-						</div>
-					  </div>
-					  <div class="swiper-slide">
-						<div class="testimonial-item">
-						  <div class="img-thumb">
 							<img src="./assets/img/team/vaibhav.jpg" alt="">
 						  </div>
 						  <div class="info">
@@ -1400,7 +1385,7 @@
 
 	<!---- Sponsors
     ==================================== -->
-	<div id="community_partner" class="community_partner">
+	<div id="Sponsors" class="Sponsers">
 		<div class="container" data-aos="fade-up" data-aos-duration="1500">
 			<h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">SPONSORS
 			</h1>
@@ -1726,8 +1711,8 @@
 						class="fab fa-discord"></i></a>
 			</li>
 			<li>
-				<a class="telegram" href="https://t.me/CodeINCommunity"><i class="fab fa-telegram"
-						target="_blank"></i></a>
+				<a class="telegram" href="https://t.me/CodeINCommunity" target="_blank"><i class="fab fa-telegram"
+						></i></a>
 			</li>
 			<li>
 				<a class="github" href="https://github.com/SauravMukherjee44/CodeIN-Community-Website"
