Updated html for telegram

--- a/index.html
+++ b/index.html
@@ -1385,7 +1385,7 @@
 
 	<!---- Sponsors
     ==================================== -->
-	<div id="Sponsors" class="Sponsers">
+	<div id="community_partner" class="community_partner">
 		<div class="container" data-aos="fade-up" data-aos-duration="1500">
 			<h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">SPONSORS
 			</h1>
