--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -94,12 +94,12 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#community_partner">
+							<a class="nav-link" href="/#community_partner">
 								Sponsors
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#contact">
+							<a class="nav-link" href="/#contact">
 								Contact
 							</a>
 						</li>
@@ -421,6 +421,7 @@
 
   <!---- Sponsors
     ==================================== -->
+  <section id="community_partner" class="section-padding bg-gray">    
   <div class="community_partner">
     <div class="container" data-aos="fade-up" data-aos-duration="1500">
       <h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">SPONSORS</h1>
@@ -469,6 +470,7 @@
       </div>
     </div>
   </div>
+  </section>
   <!--
          End  Sponsors
           ==================================== -->
