--- a/opportunity.html
+++ b/opportunity.html
@@ -718,6 +718,68 @@
                 </div>
             </div>
 
+
+        <div class="oppurtunity_section">
+            <div class="card">
+                <img class="card-img-top" src="./assets/img/opportunity/gtechcamp.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title"> Google Cloud Tech Camp</h5>
+                    <br> <br>
+                    </p>
+                    <ul style="list-style-type:square">
+
+                        <li>Cloud Tech Camp presented by Google Cloud- Associate Cloud Engineer Certification Bootcamp</li>
+                            <br>
+
+                        
+                        <li>
+                            Initiate your journey to becoming a Google Cloud Certified with Associate Cloud Engineer in Hack2skill x Google Developer Cloud Tech Camp presented by Google Cloud.                            
+                          
+                            <br><br>
+                            Rewards: <br>
+                            •Swags Giveaway🥳<br>
+                            •Goodies for certificate completion🤩<br>
+                            •Get Certification of $129 for free🔥<br>
+                            • Certificate
+                             <br>
+ 
+                        </li> <br>
+                        <li>
+                            To know more, Click here 👇:-
+                            <a
+                                href="https://hack2skill.com/hack/googlecloud-tc-ace1?utm_source=mail1&utm_medium=sendy">https://hack2skill.com/hack/googlecloud-tc-ace1?utm_source=mail1&utm_medium=sendy</a>
+                        </li>
+
+                        <br>
+                        <br>
+
+                    </ul>
+                    <br>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img-top" src="./assets/img/opportunity/gcp.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">GCP Summer of Learning 2022 </h5>
+                    <br> <br>
+                    </p>
+                    <ul>
+                        <li>
+                            Reserve your seat at the Google Cloud Summer of Learning — a 6 weeks, no cost, online learning programme happening from August 20th </li>
+                            <br>
+                            <li>Complete your path and stand a chance to win* $200 Google Cloud Platform Vouchers-to be claimed within 90 days and spent by December 31, 2022🔥</li>
+                               <ul>📌Register here🔥:</ul> 
+                            <a
+                                href="https://events.withgoogle.com/emea-summer-learning/#content">https://events.withgoogle.com/emea-summer-learning/#content</a>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </div>
+
+
         </div>
         <!-- ------------------- -->
 
