--- a/index.html
+++ b/index.html
@@ -1321,6 +1321,22 @@
 						  </div>
 						</div>
 					  </div>
+					 <div class="swiper-slide">
+						<div class="testimonial-item">
+						  <div class="img-thumb">
+
+							<img src="./assets/img/team/dimple.jpg" alt="">
+						  </div>
+						  <div class="info">
+							<h2 class="text-dark">Dimple</h2>
+							<h3>CodeIN Community is the best mentor's guide. 
+								The articles provide a whole host of ways to learn and grow, 
+								from workshops and meetings sessions to hackathons and internship opportunities.
+								I personally love the interactive live sessions.
+								They provide all of this at no cost, so you have nothing to lose by checking.</h3>
+						  </div>
+						</div>
+					  </div>	
 					</div>
 				  </div>
 				</div>
