--- a/index.html
+++ b/index.html
@@ -1339,6 +1339,25 @@
 						  </div>
 						</div>
 					  </div>
+					 	 <div class="swiper-slide">
+							<div class="testimonial-item">
+						  		<div class="img-thumb">
+
+									<img src="./assets/img/team/shalini.jpg" alt="">
+						  		</div>
+						  	<div class="info">
+								<h2 class="text-dark">Shalini Singh</h2>
+								<h3>The way to start an open source project
+									  is not to look at technology fields,but to 
+									  look for real world problems that can be 
+									  solved and for this CodeIN community has
+									  helped me alot since it was my very first 
+									  experience which this commmunity made easy.
+									  The team members are soo supportive.
+									  I would like to thanks each one of them for
+									  making this soo amazing!</h3>
+						  	</div>
+						</div>
 					</div>
 				  </div>
 				</div>
