Resolved Sponsor button issue

--- a/blog.html
+++ b/blog.html
@@ -337,7 +337,7 @@
 
   <!---- Sponsors
     ==================================== -->
-  <div class="community_partner">
+  <div id ="community_partner">
     <div class="container" data-aos="fade-up" data-aos-duration="1500">
       <h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">SPONSORS</h1>
       <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
@@ -394,7 +394,7 @@
 
   <!---- Community partner
       ==================================== -->
-  <div class="community_partner">
+  <div id ="community_partner">
     <div class="container" data-aos="fade-up" data-aos-duration="1500">
       <h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">OUR COMMUNITY
         PARTNERS</h1>
