--- a/index.html
+++ b/index.html
@@ -1284,6 +1284,26 @@
 						  </div>
 						</div>
 					  </div>
+					   <div class="swiper-slide">
+						<div class="testimonial-item">
+						  <div class="img-thumb">
+							<img src="./assets/img/team/shalini.jpeg" alt="">
+						  </div>
+						  <div class="info">
+							<h2>Shalini Singh
+							</h2>
+							<h3>The way to start an open source project 
+								is not to look at technology fields, 
+								but to look for real world problems that 
+								can be solved and for this CodeIn community
+								has helped me alot since it was my first 
+								experience which this community made easy 
+								the team members here are soo supportive.
+								I would like to thanks each one of them for
+								such an amazing start!</h3>
+						  </div>
+						</div>
+					  </div>
 					  <div class="swiper-slide">
 						<div class="testimonial-item">
 						  <div class="img-thumb">
