Changed the theme to yellow

--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-danger rounded px-3" id="joinus" href="#joinus" style="background-color:none ;">
+							<a class="nav-link btn btn-outline-warning rounded px-3" id="joinus" href="#joinus" style="background-color:none ;">
 								Join Us
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link btn btn-outline-danger rounded px-3" id="hacktoberfest" target="_blank" href="./hacktoberfest2022.html">
+							<a class="nav-link btn btn-outline-warning rounded px-3" id="hacktoberfest" target="_blank" href="./hacktoberfest2022.html">
 								HacktoberFest 2022
 							</a>
 						</li>
@@ -156,7 +156,7 @@
 									Join
 
 									Now</i></a>
-								<a href="#about" class="btn btn-outline-danger btn-common video-popup">
+								<a href="#about" class="btn btn-outline-warning btn-common video-popup">
 									<i class=" fa fa-sharp fa-solid fa-graduation-cap"></i>Learn
 									More</i></a>
 							</div>
