--- a/index.html
+++ b/index.html
@@ -1343,7 +1343,7 @@
 							<div class="testimonial-item">
 						  		<div class="img-thumb">
 
-									<img src="./assets/img/team/shalini.jpg" alt="">
+									<img src="./assets/img/team/shalini.jpeg" alt="">
 						  		</div>
 						  	<div class="info">
 								<h2 class="text-dark">Shalini Singh</h2>
