--- a/index.html
+++ b/index.html
@@ -1353,9 +1353,7 @@
 									  solved and for this CodeIN community has
 									  helped me alot since it was my very first 
 									  experience which this commmunity made easy.
-									  The team members are soo supportive.
-									  I would like to thanks each one of them for
-									  making this soo amazing!</h3>
+									  Thank You for doing amazing work.</h3>
 						  	</div>
 						</div>
 					</div>
